--- a/project/build.properties
+++ b/project/build.properties
@@ -1,6 +1,6 @@
 #Project properties
 #Wed Jun 15 18:16:22 EEST 2011
-project.organization=whiter4bbit.info
+project.organization=info.whiter4bbit
 project.name=chttp
 sbt.version=0.7.7
 project.version=1.0
